chnage lab3 of ivakin daniil. Поменял конструктор CourtLog Заменил коллекторы в методах CoutrLog на toList() Изменил тесты на параметризованные